BUG#30363: complex query slower by 2.6x to 6x times in 5.2 then in 5.1 The bugfix is a fix for the incorrect merge:  - Make make_join_orderinfo() determine the last table that can use the    join buffering in exactly the same way as it is done in    make_join_readinfo() in current 5.1  - Remove now unneeded code from make_join_readinfo()